profilelist1exp/unpackaged/objects/StrategyandOppValues__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Bu_s_Are_Involved__c</fullName>
        <label>Bu&apos;s Are Involved</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bu_s_Are_Offering__c</fullName>
        <label>Bu&apos;s Are Offering</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>StrategyandOppValues</label>
</CustomObject>